[project]
name = "blr-traffic-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.151.9",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.2",
    "openlocationcode>=1.0.1",
    "pandas>=2.3.1",
    "plotly>=6.5.2",
    "pykernel>=0.1.6",
    "pytest>=9.0.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "statsmodels>=0.14.6",
    "timezonefinder>=8.1.0",
    "tqdm>=4.67.1",
]
