[project]
name = "traffic-monitor-lizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "numpy>=2.3.2",
    "openlocationcode>=1.0.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "timezonefinder>=8.1.0",
]

[dependency-groups]
analysis = [
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.1",
]
notebook = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pykernel>=0.1.6",
]
test = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
]
